--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="clock">
-        <div class="hour">
+        <div class="clock-item hour">
             <div class="hr" id="hr"></div>
         </div>
-        <div class="min">
+        <div class="clock-item min">
             <div class="mn" id="mn"></div>
         </div>
-        <div class="sec">
+        <div class="clock-item sec">
             <div class="sc" id="sc"></div>
         </div>
+        <span class="number" id="number"></span>
     </div>
     
 
